add postgres repository for writing to db

--- a/Api/appsettings.json
+++ b/Api/appsettings.json
@@ -10,5 +10,8 @@
     "Audience": "https://messaging.com/",
     "Key": "This is a sample secret key"
   },
+  "Repository": {
+    "Type": "File"
+  },
   "AllowedHosts": "*"
 }
