add clean method to repository

--- a/Api/appsettings.json
+++ b/Api/appsettings.json
@@ -11,7 +11,7 @@
     "Key": "This is a sample secret key"
   },
   "Repository": {
-    "Type": "File"
+    "Type": "DB"
   },
   "AllowedHosts": "*"
 }
